# ai-phishing-investigator

./: README.md  ai_explainer.py  console.py  detector.py  main.py  phishx_memory.db  phishx_memory.db-shm  phishx_memory.db-wal  pyproject.toml  report.txt  reporter.py  test_final.db  test_final.db-shm  test_verify_memory.db  test_verify_memory.db-shm  whitelist.py
ai/: investigator.py
intel/: osint.py
ioc/: extractor.py
memory/: database.py  dna.py  graph.py
parser/: email_parser.py
rules/: rule_generator.py
